aligned the table to the left of the flex container and fixed the preformatter text

--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,10 @@ dl {
 
 /* Tables */
 
+table {
+    align-self: flex-start;
+}
+
 th:not(:empty) {
     background-color: var(--mariner-colour);
     color: var(--alabaster-colour);
